MDEV-20939: Race condition between mysqldump import and InnoDB persistent statistics calculation

Added mysql.innodb_index_stats and mysql.innodb_table_stats so that mysqldump
ignores these internal tables as well.